--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
-    <title>Lab One Part 2</title>
+    <title>chirpus, inc.</title>
 </head>
 
 <body>
